# EpiBenchmark

./: .gitignore  EpiBench_scores.csv  LICENSE  Makefile  README.md  example-config.yml  getgt-config.yml  mkdocs.yml  plot-config.yml  pyproject.toml  score-config.yml  setup-config.yml
.github/workflows/: docs.yml
docs/: challenges.md  design.md  index.md  reference.md
docs/api/: __init__.md  __main__.md  benchmark_plotting.md  cli.md  config.md  extract_model_data_details.md  ground_truth.md  gt_from_hub.md  index.md  plot_evaluation_results.md  score.md  scoring_bridge.md  setup.md
docs/getting-started/: challenge-library.md  configuration-templates.md  installation.md  installation_longleaf.md  overview.md  quick-start.md
docs/stylesheets/: extra.css
docs/workflows/: epibench-plot.md  epibench-score.md  epibench-setup.md
josephs_influpaint_guidance_files/: inpainting.py  plot_evaluation_results.py
src/: pyproject.toml
src/epibench/: __init__.py  __main__.py  benchmark_plotting.py  build_plots.py  cli.py  config.py  extract_model_data_details.py  fetch.py  getgt.py  ground_truth.py  gt_from_hub.py  horizon_utils.py  hub_date_utils.py  library.py  main.py  make_scorecard.py  path_utils.py  plot.py  plot_evaluation_results.py  quantile_validation.py  score.py  scorecard_functions.py  scoring_bridge.py  scoring_ground_truth.py  scoring_summary.py  setup.py  setup_ground_truth.py  validate_config.py
src/epibench/challenges-library/: challenges.json  epb_flu_inchosp_2023-2024_v1.json  epb_flu_inchosp_2023-2024v1.json  epb_flu_inchosp_2024-2025_dev.json  epb_flu_inchosp_2024-2025_v1.json  epb_flu_inchosp_2025-2026_dev.json  epb_flu_inchosp_2025-2026_v1.json  epb_rsv_inchosp_2025-2026_dev.json  epb_rsv_inchosp_2025-2026_v1.json
src/epibench/epibench_scoring_plotting/src/epibench_plotting/: plot_evaluation_results.py
src/epibench/epibench_scoring_plotting/src/epibench_plotting/influpaint/utils/: season_axis.py
src/epibench/hub-dates-library/: hub_dates.json
