[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EpiBench"
version = "0.0.1"
description = "Benchmark tool to evaluate model performance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "numpy>=1.24,<2.2",
    "pandas>=2.0,<3",
    "PyYAML>=6.0",
    "pygit2",
    "hubdata",
    "matplotlib>=3.7"
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
epibench = "epibench.cli:main"
